--- a/Yamba/res/values/strings.xml
+++ b/Yamba/res/values/strings.xml
@@ -15,5 +15,7 @@
     <string name="titleApiRoot">ApiRoot</string>
     <string name="summaryApiRoot">summaryApiRoot</string>
     <string name="titlePrefs">Prefs</string>
+    <string name="titleServiceStart">ServiceStart</string>
+    <string name="titleServiceStop">ServiceStop</string>
 
 </resources>
